# git-stars

./: .README-backup.md  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  README-PROJECT.md  README.md  SETUP.md  STREAMLIT.md  app.py  chart.md  data.json  data_analysis.md  data_analysis.py  eslint.config.js  fonts.css  functions.manifest.json  generate-page.js  generate-site.js  generateChartUrl.js  generator-bckup.js  generator.js  house.manifest.json  index-bckup.html  index.html  logging.js  logs.html  logs.js  main.css  main.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  stargazed.js  streamlit-app.py  (+6 more)
.github/: README.md
.streamlit/: config.toml
_report/: 00_intake.md  01_audit.md  02_plan.md
agents/: alignment-scout.md  enrichment-specialist.md  repo-analyst.md  repo-navigator.md  repo-ops.md  tool-architect.md
assets/: logs-2DolNFt1.js.map  main-DvXGz5MR.css  main-Jmptx_Ow.js  main-Jmptx_Ow.js.map
code-reports/: 2025-09-27.md
css/: index.css
data/: action-items.json  automation-runs.json  data.json  mine-health.json  model-zoo-text-models.json  my-repos.json  ops-digest.json  repo-inspections.json  repo-ops-kits.json  repo-signals.json  stats.json  template-kits.json  weekly-research-review.json
docs/: MCP_SERVER.md  STATISTICS.md  batch_0_9.json  batch_100_109.json  batch_10_19.json  batch_110_119.json  batch_120_129.json  batch_130_139.json  batch_140_149.json  batch_150_159.json  batch_160_169.json  batch_170_179.json  batch_20_29.json  (+7 more)
(+163 files in other folders)
