[project]
name = "dc_ss25_docs"
version = "0.1.0"
description = "Design exploration, development, and documentation for the modules SS25"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartesia>=1.4.0",
    "google-genai>=1.5.0",
    "load-dotenv>=0.1.0",
    "ipython (>=9.0.2,<10.0.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "mss (>=10.0.0,<11.0.0)",
]
